// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dispatch an event and retrieve it 1`] = `
TestEvent {
  "event_type": "test event",
  "test_data": "yo momma",
}
`;

exports[`dispatch multiple events and cascade 1`] = `
TestEvent1 {
  "event_type": "test event",
  "test_data": "yo momma",
}
`;

exports[`dispatch multiple events and cascade 2`] = `
TestEvent2 {
  "event_type": "test event 2",
  "name": "fred",
}
`;

exports[`hits callback on all namespace callbacks 1`] = `
TestEvent1 {
  "event_type": "test event",
  "test_data": "yo momma",
}
`;

exports[`hits callback on all namespace callbacks 2`] = `
TestEvent1 {
  "event_type": "test event",
  "test_data": "yo momma",
}
`;
